[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
euclid = "0.22.9"
indicatif = { version = "0.17.7", features = ["rayon"] }
minifb = "0.25.0"
rand = "0.8.5"
rayon = "1.8.0"
